force-app/main/default/objects/User_Availability_Profile_Config__mdt/User_Availability_Profile_Config__mdt.object-meta.xml
<CustomObject>
    <label>User Availability Profile Config</label>
    <pluralLabel>User Availability Profile Configs</pluralLabel>
</CustomObject>