force-app/main/default/objects/User_Availability_Profile_Config__mdt/fields/Default_Shift__c.field-meta.xml
<CustomField>
    <fullName>Default_Shift__c</fullName>
    <defaultValue>&quot;Day Shift&quot;</defaultValue>
    <description>Default shift for users with this profile. Must match a Shift_Configuration__mdt Shift_Name__c value.</description>
    <label>Default Shift</label>
    <length>100</length>
    <type>Text</type>
</CustomField>