force-app/main/default/objects/User_Availability_Profile_Config__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>