force-app/main/default/objects/User_Availability_Profile_Config__mdt/fields/Visible_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Visible_Profiles__c</fullName>
    <label>Visible Profiles</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>