force-app/main/default/objects/User_Availability_Profile_Config__mdt/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Profile_Name__c</columns>
    <columns>Visible_Profiles__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>New</label>
</ListView>